; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/staging/winbond/extr_wbusb.c_hal_set_ethernet_address.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/staging/winbond/extr_wbusb.c_hal_set_ethernet_address.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.hw_data = type { i64, i64 }

@ETH_ALEN = common dso_local global i32 0, align 4
@AUTO_INCREMENT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.hw_data*, i32*)* @hal_set_ethernet_address to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @hal_set_ethernet_address(%struct.hw_data* %0, i32* %1) #0 {
  %3 = alloca %struct.hw_data*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca [2 x i32], align 4
  store %struct.hw_data* %0, %struct.hw_data** %3, align 8
  store i32* %1, i32** %4, align 8
  %6 = load %struct.hw_data*, %struct.hw_data** %3, align 8
  %7 = getelementptr inbounds %struct.hw_data, %struct.hw_data* %6, i32 0, i32 1
  %8 = load i64, i64* %7, align 8
  %9 = icmp ne i64 %8, 0
  br i1 %9, label %10, label %11

10:                                               ; preds = %2
  br label %38

11:                                               ; preds = %2
  %12 = load %struct.hw_data*, %struct.hw_data** %3, align 8
  %13 = getelementptr inbounds %struct.hw_data, %struct.hw_data* %12, i32 0, i32 0
  %14 = load i64, i64* %13, align 8
  %15 = load i32*, i32** %4, align 8
  %16 = load i32, i32* @ETH_ALEN, align 4
  %17 = call i32 @memcpy(i64 %14, i32* %15, i32 %16)
  %18 = load %struct.hw_data*, %struct.hw_data** %3, align 8
  %19 = getelementptr inbounds %struct.hw_data, %struct.hw_data* %18, i32 0, i32 0
  %20 = load i64, i64* %19, align 8
  %21 = inttoptr i64 %20 to i32*
  %22 = load i32, i32* %21, align 4
  %23 = call i32 @cpu_to_le32(i32 %22)
  %24 = getelementptr inbounds [2 x i32], [2 x i32]* %5, i64 0, i64 0
  store i32 %23, i32* %24, align 4
  %25 = load %struct.hw_data*, %struct.hw_data** %3, align 8
  %26 = getelementptr inbounds %struct.hw_data, %struct.hw_data* %25, i32 0, i32 0
  %27 = load i64, i64* %26, align 8
  %28 = add nsw i64 %27, 4
  %29 = inttoptr i64 %28 to i32*
  %30 = load i32, i32* %29, align 4
  %31 = call i32 @cpu_to_le32(i32 %30)
  %32 = and i32 %31, 65535
  %33 = getelementptr inbounds [2 x i32], [2 x i32]* %5, i64 0, i64 1
  store i32 %32, i32* %33, align 4
  %34 = load %struct.hw_data*, %struct.hw_data** %3, align 8
  %35 = getelementptr inbounds [2 x i32], [2 x i32]* %5, i64 0, i64 0
  %36 = load i32, i32* @AUTO_INCREMENT, align 4
  %37 = call i32 @Wb35Reg_BurstWrite(%struct.hw_data* %34, i32 1000, i32* %35, i32 2, i32 %36)
  br label %38

38:                                               ; preds = %11, %10
  ret void
}

declare dso_local i32 @memcpy(i64, i32*, i32) #1

declare dso_local i32 @cpu_to_le32(i32) #1

declare dso_local i32 @Wb35Reg_BurstWrite(%struct.hw_data*, i32, i32*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
